# leet2local

./: .gitignore  CHANGELOG.md  LICENSE  Leetcode Project Prompt.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
leet2local/: auth.py  cli.py  config.py  fetcher.py  html_parser.py  models.py  queries.py  rate_limiter.py  runner.py  submitter.py
leet2local/data/: slug_map.json
leet2local/runners/: base.py  cpp_runner.py  java_runner.py  javascript_runner.py  python_runner.py
leet2local/templates/: test_runner.java.j2  test_runner.js.j2
scripts/: generate_slug_map.py
templates/: test_runner.cpp.j2  test_runner.py.j2
tests/: test_config.py  test_html_parser.py  test_runner_python.py
