[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leet2local"
dynamic = ["version"]
description = "Solve LeetCode problems in your local IDE"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dhinesh", email = "dhineshpro33@gmail.com" },
]
keywords = [
    "leetcode",
    "cli",
    "competitive-programming",
    "interview-prep",
    "coding-challenges",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.28",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "keyring>=25.0",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
lc = "leet2local.cli:app"

[project.urls]
Homepage = "https://github.com/dhineshtheprogrammer/leet2local"
Repository = "https://github.com/dhineshtheprogrammer/leet2local.git"
"Bug Tracker" = "https://github.com/dhineshtheprogrammer/leet2local/issues"
Changelog = "https://github.com/dhineshtheprogrammer/leet2local/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "leet2local/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["leet2local"]
include = [
    "leet2local/data/*.json",
    "leet2local/templates/*.j2",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "scripts/",
    "tests/",
    "Leetcode Project Prompt.md",
    "leetcode/",
    ".github/",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
